complete website revamp

--- a/package.json
+++ b/package.json
@@ -1,25 +1,14 @@
 {
   "name": "umdtc.github.io",
-  "version": "1.0.0",
-  "description": "umdtc website",
+  "version": "2.0.0",
+  "description": "UMDTC Website",
   "main": "gulpfile.js",
-  "dependencies": {
-    "flow-bin": "^0.51.1",
-    "npm": "^5.3.0"
-  },
   "devDependencies": {
-    "bootstrap": "^3.3.7",
-    "browser-sync": "^2.13.0",
-    "font-awesome": "^4.6.3",
+    "browser-sync": "^2.18.13",
     "gulp": "^3.9.1",
-    "gulp-clean-css": "^2.0.10",
-    "gulp-header": "^1.8.7",
+    "gulp-csso": "^3.0.0",
     "gulp-less": "^3.1.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-uglify": "^1.5.4",
-    "jquery": "^1.11.3",
-    "magnific-popup": "^1.1.0",
-    "scrollreveal": "^3.1.4"
+    "gulp-rename": "^1.2.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -28,7 +17,7 @@
     "type": "git",
     "url": "git+https://github.com/umdtc/umdtc.github.io.git"
   },
-  "author": "",
+  "author": "UMD Tzu Ching",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/umdtc/umdtc.github.io/issues"
